<resources>
    <string name="app_name">CS4520_InClass_Rishabh_0516</string>
    <string name="name_practiceButton">Practice</string>
    <string name="name_buttonLog">LogCat</string>
    <string name="name_buttonToast">Toast</string>
    <string name="name_inclass1">In-Class 1</string>
    <string name="name_BMI">Body Mass Index (BMI)</string>
    <string name="name_weight">Weight</string>
    <string name="name_weightEdit">Your Weight in Pounds</string>
    <string name="name_lb">lb</string>
    <string name="name_height">Height</string>
    <string name="name_weighText" />
    <string name="name_ft">feet</string>
    <string name="hint_feet">feet</string>
    <string name="hint_inches">inches</string>
    <string name="name_inches">inches</string>
    <string name="BMIButton">Calculate BMI</string>
    <string name="ClickText">Click on Calculate BMI to find your BMI</string>
    <string name="name_in">in</string>
    <string name="name_feet">ft</string>
    <string name="hint_weight">Weight</string>
    <string name="button_inclass2">In-Class 2</string>
    <string name="name_name">Name</string>
    <string name="name_email">Email</string>
    <string name="name_use">I use</string>
    <string name="name_android">Android</string>
    <string name="name_ios">iOS</string>
    <string name="name_mood">"Your current mood: "</string>
    <string name="name_mood2">Your current mood: Happy</string>
    <string name="name_submit">Submit</string>
    <string name="name_select">Select your Avatar</string>
    <string name="nameText">Name: Mark</string>
    <string name="email_text">Email: mark@abc.xyz</string>
    <string name="name_use2">I use Android!</string>
    <string name="name_mood3">I am Happy!</string>
    <string name="string_mood">Your current mood: happy</string>
    <string name="inclass3_button">IN-CLASS 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inclass4_button">IN-CLASS 4</string>
    <string name="complexity_string">Select Complexity:</string>
    <string name="times_name">times</string>
    <string name="input_name">0</string>
    <string name="min_name">Minimum</string>
    <string name="mini_name">Minimum:</string>
    <string name="max_name">Maximum:</string>
    <string name="average_name">Average:</string>
    <string name="generate_name">Generate Number</string>
    <string name="inclass5_button">IN-CLASS 5</string>
    <string name="go_button">GO</string>
    <string name="loadingtext">Loading...</string>
    <string name="news_text">News</string>
    <string name="country_text">Country</string>
    <string name="category_text">Category</string>
    <string name="submit_button">Submit</string>
    <string name="result_name">Results:</string>
    <string name="button_inclass6">IN-CLASS 6</string>
    <string name="inclass8">IN-CLASS 8</string>
    <string name="dontAccount">Don\'t have an account?</string>
    <string name="message" />
    <string name="message_str">Message</string>
    <string name="name_str">Name:</string>
    <string name="Signout">Sign Out</string>
    <string name="name3">Name</string>
    <string name="email3">Email</string>
    <string name="add">Add</string>
    <string name="messagestr">Enter</string>
    <string name="Message" />
    <string name="messagebutton">Send</string>
    <string name="textmessage2">Message</string>
    <string name="profilphoto">Click below to take photo for your profile:</string>
    <string name="registerval">Register</string>
    <string name="repeat">Repeat Password</string>
    <string name="editprofile">Edit Profile</string>
    <string name="iinib">Upload</string>
    <string name="capture">capture</string>
    <string name="gallery">gallery</string>
    <string name="flipcamera">Flip Camera</string>
    <string name="Gallery">gallery</string>
    <string name="take_photo">take_photo</string>
</resources>